--- a/blog-post.html
+++ b/blog-post.html
@@ -34,15 +34,7 @@
         <nav>
             <ul class="nav-tabs">
                 <li><a href="#" data-category="home">Home</a></li>
-                <li><a href="#" data-category="us">U.S.</a></li>
-                <li><a href="#" data-category="world">World</a></li>
-                <li><a href="#" data-category="business">Business</a></li>
-                <li><a href="#" data-category="technology">Technology</a></li>
-                <li><a href="#" data-category="entertainment">Entertainment</a></li>
-                <li><a href="#" data-category="sports">Sports</a></li>
-                <li><a href="#" data-category="science">Science</a></li>
-                <li><a href="#" data-category="health">Health</a></li>
-            </ul>
+                </ul>
         </nav>
 
         <div class="filter-section">
@@ -75,19 +67,18 @@
                 <div class="blog-categories">
                     <h3>Blog Category</h3>
                     <ul>
-                        <li><a href="#">View All</a></li>
-                        <li><a href="#">Data Structures & Algorithms (DSA)</a></li>
-                        <li><a href="#">Programming Tools</a></li>
-                        <li><a href="#">Programming Languages</a></li>
-                        <li><a href="#">Frameworks</a></li>
+                        <li><a href="#" data-category="home">Home</a></li>
+                        <li><a href="#" data-category="us">U.S.</a></li>
+                        <li><a href="#" data-category="world">World</a></li>
+                        <li><a href="#" data-category="business">Business</a></li>
+                        <li><a href="#" data-category="technology">Technology</a></li>
+                        <li><a href="#" data-category="entertainment">Entertainment</a></li>
+                        <li><a href="#" data-category="sports">Sports</a></li>
+                        <li><a href="#" data-category="science">Science</a></li>
+                        <li><a href="#" data-category="health">Health</a></li>
                     </ul>
                 </div>
-                <div class="new-course">
-                    <h3>New Course on Design Pattern</h3>
-                    <p>Enroll now and save 25%</p>
-                    <button>Enroll Now</button>
-                </div>
-            </aside>
+                </aside>
 
             <div class="content-area">
                 <section class="popular-today">
