--- a/blog-post.html
+++ b/blog-post.html
@@ -56,12 +56,6 @@
     </header>
 
     <main class="container">
-        <section class="featured-articles">
-            <h2>Featured</h2>
-            <div class="featured-articles-slider">
-                </div>
-        </section>
-
         <div class="main-content">
             <aside class="sidebar">
                 <div class="blog-categories">
@@ -81,12 +75,6 @@
                 </aside>
 
             <div class="content-area">
-                <section class="popular-today">
-                    <h2>Popular Today</h2>
-                    <div class="articles-container popular-grid">
-                        </div>
-                </section>
-
                 <section class="latest-articles">
                     <h2>The Blog</h2>
                     <div id="news-container" class="articles-container latest-grid">
@@ -98,7 +86,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Blog. All rights reserved.</p>
+            <p>&copy; 2025 Bus Army Dude. All rights reserved.</p>
         </div>
     </footer>
 
