--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@ s0.parentNode.insertBefore(s1,s0);
             <i class="fab fa-instagram social-icon"></i>
             <span>Instagram</span>
         </a>
+        <a href="https://music.amazon.com/profiles/@riverkritzar40820895?marketplaceId=ATVPDKIKX0DER&musicTerritory=US&ref=dm_sh_itT4WHDz0nPzPfGGi9YYP0iqI" class="social-button">
+            <i class="fa-brands fa-amazon social-icon"></i>
+            <span>Amazon Music</span>
+        </a>
     </div>
 </div>
 
@@ -218,7 +222,7 @@ s0.parentNode.insertBefore(s1,s0);
             <a href="https://bus-army-dude.instatus.com/" target="_blank" class="link-button">Bus Army Dude's Website Status Page</a>
             <a href="https://busarmydude.tawk.help/" target="_blank" class="link-button">Bus Army Dude's Knowledge Portal</a>
             <a href="https://rkritzar52.github.io/riversportfolio/" target="_blank" class="link-button">River's Portfolio</a>
-            <a href="blog-post.html" target="_blank" class="link-button">Bus Army Dude's Blog</a>
+            <a href="blog-post.html" class="link-button">Bus Army Dude's Blog</a>
         </div>
     </div>
 
@@ -475,12 +479,12 @@ s0.parentNode.insertBefore(s1,s0);
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (43.4%)</li>
-                            <li>CSS (37.4%)</li>
-                            <li>HTML (19.2%)</li>
+                            <li>JavaScript (49.6%)</li>
+                            <li>CSS (32.1%)</li>
+                            <li>HTML (18.3%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: April 2, 2025 10:49:43 AM EST</li>
+                    <li>Last Updated: April 5, 2025 9:27:55 AM EST</li>
                 </ul>
             </div>
         </div>
@@ -630,7 +634,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <div class="battery-percentage">99%</div>
             </div>
         </div>
-        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 220</div>
+        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 222</div>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
