--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="shoutouts-section section">
             <div id="instagram-shoutouts">
                 <h2>Instagram Creator Shoutouts</h2>
-                <p class="last-updated"><span id="lastUpdatedInstagram">N/A</span></p>  </div>
+                <p class="instagram-last-updated"><span id="lastUpdatedInstagram">N/A</span></p>  </div>
             <div class="instagram-creator-grid">
                 </div>
         </div>
