--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ s0.parentNode.insertBefore(s1,s0);
           <p id="tiktok-last-updated-timestamp"></p>
       </div>
       <div class="creator-grid">
-          <!-- Cards will be dynamically generated here -->
+          <!-- TikTok creator cards will be dynamically generated here -->
       </div>
       <div class="unavailable-message" style="display: none;"></div>
   </div>
@@ -198,9 +198,11 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="shoutouts-section section">
             <div id="instagram-shoutouts">
                 <h2>Instagram Creator Shoutouts</h2>
-                <p class="instagram-last-updated"><span id="lastUpdatedInstagram">N/A</span></p>  </div>
+                <p id="lastUpdatedInstagram"></p>
+            </div>
             <div class="instagram-creator-grid">
-                </div>
+                <!-- Instagram creator cards will be dynamically generated here -->
+            </div>
         </div>
 
         <!-- YouTube Shoutouts Section -->
