--- a/blog-post.html
+++ b/blog-post.html
@@ -88,9 +88,7 @@
     </main>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2025 Bus Army Dude. All rights reserved.</p>
-        </div>
+        <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
     </footer>
 
     <div id="modal" class="modal">
