--- a/blog-post.html
+++ b/blog-post.html
@@ -3,76 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Blog</title>
+    <title>Blog Page</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Include FontAwesome for icons (optional) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <ul id="categories-nav">
+                <!-- Categories will be populated by JavaScript -->
+            </ul>
+        </nav>
+    </header>
 
-    <!-- Navigation Bar -->
-    <div class="navbar">
-        <ul class="nav-tabs">
-            <li><a href="#" data-category="home" class="active">Home</a></li>
-            <li><a href="#" data-category="technology">Technology</a></li>
-            <li><a href="#" data-category="business">Business</a></li>
-            <li><a href="#" data-category="sports">Sports</a></li>
-            <li><a href="#" data-category="science">Science</a></li>
-            <li><a href="#" data-category="health">Health</a></li>
-        </ul>
+    <!-- Filter Section -->
+    <section class="filter-section">
+        <label for="time-filter">Filter by Time:</label>
+        <select id="time-filter">
+            <option value="anytime">Anytime</option>
+            <option value="past-hour">Past Hour</option>
+            <option value="past-24">Past 24 Hours</option>
+            <option value="past-week">Past Week</option>
+            <option value="past-year">Past Year</option>
+        </select>
+    </section>
 
-        <div class="filter">
-            <label for="time-filter">Time Filter: </label>
-            <select id="time-filter">
-                <option value="anytime">Anytime</option>
-                <option value="past-hour">Past Hour</option>
-                <option value="past-24-hours">Past 24 Hours</option>
-                <option value="past-week">Past Week</option>
-                <option value="past-year">Past Year</option>
-            </select>
+    <!-- Main Content Section -->
+    <main class="container">
+        <!-- Main Content -->
+        <div class="main-content">
+            <!-- Articles Section -->
+            <div class="content-area">
+                <div class="latest-articles">
+                    <h2>Latest Articles</h2>
+                    <div id="articles-container" class="articles-container">
+                        <!-- Articles will be populated by JavaScript -->
+                    </div>
+                </div>
+            </div>
 
-            <label for="category-select">Category: </label>
-            <select id="category-select">
-                <option value="all">All</option>
-                <option value="technology">Technology</option>
-                <option value="business">Business</option>
-                <option value="sports">Sports</option>
-                <option value="science">Science</option>
-                <option value="health">Health</option>
-            </select>
+            <!-- Sidebar Section -->
+            <aside class="sidebar">
+                <h3>Blog Categories</h3>
+                <div class="blog-categories">
+                    <ul id="categories-list">
+                        <!-- Categories will be populated by JavaScript -->
+                    </ul>
+                </div>
+            </aside>
         </div>
-    </div>
+    </main>
 
-    <!-- News Container -->
-    <div id="news-container" class="news-container">
-        <!-- News articles will be dynamically loaded here -->
-    </div>
-
-    <!-- Article Modal -->
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <div class="modal-header">
-                <span id="category-name" class="category-name"></span>
-                <h2 id="article-title" class="article-title"></h2>
-            </div>
-            <div class="modal-body">
-                <p id="short-description" class="short-description"></p>
-                <p id="author" class="author"></p>
-                <p id="date" class="date"></p>
-                <img id="article-image" class="article-image" src="" alt="Article Image">
-                <div id="article-content" class="article-content"></div>
-            </div>
-            <div class="modal-footer">
-                <button class="close-button">Close</button>
-            </div>
-        </div>
-    </div>
-
+    <!-- Footer Section -->
     <footer>
-        <p>&copy; <span id="year"></span> Your Website. All Rights Reserved.</p>
+        <p>&copy; 2025 Your Blog</p>
     </footer>
 
-    <script src="news.js"></script>
+    <!-- Modal for Article Details -->
+    <div id="article-modal" class="modal">
+        <div class="modal-content">
+            <button class="close-button">&times;</button>
+            <div class="modal-header">
+                <h2 id="modal-title"></h2>
+            </div>
+            <div class="modal-body">
+                <img id="modal-image" src="" alt="Article Image">
+                <p id="modal-description"></p>
+                <div class="posted-by-date">
+                    <span id="modal-posted-by"></span> - <span id="modal-posted-date"></span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
