--- a/blog-post.html
+++ b/blog-post.html
@@ -7,59 +7,48 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header Section -->
     <header>
         <nav>
             <ul id="categories-nav">
-                <!-- Categories will be populated by JavaScript -->
-            </ul>
+                </ul>
         </nav>
     </header>
 
-    <!-- Filter Section -->
     <section class="filter-section">
         <label for="time-filter">Filter by Time:</label>
         <select id="time-filter">
             <option value="anytime">Anytime</option>
             <option value="past-hour">Past Hour</option>
-            <option value="past-24">Past 24 Hours</option>
+            <option value="past-24-hours">Past 24 Hours</option>
             <option value="past-week">Past Week</option>
             <option value="past-year">Past Year</option>
         </select>
     </section>
 
-    <!-- Main Content Section -->
     <main class="container">
-        <!-- Main Content -->
         <div class="main-content">
-            <!-- Articles Section -->
             <div class="content-area">
                 <div class="latest-articles">
                     <h2>Latest Articles</h2>
                     <div id="articles-container" class="articles-container">
-                        <!-- Articles will be populated by JavaScript -->
-                    </div>
+                        </div>
                 </div>
             </div>
 
-            <!-- Sidebar Section -->
             <aside class="sidebar">
                 <h3>Blog Categories</h3>
                 <div class="blog-categories">
                     <ul id="categories-list">
-                        <!-- Categories will be populated by JavaScript -->
-                    </ul>
+                        </ul>
                 </div>
             </aside>
         </div>
     </main>
 
-    <!-- Footer Section -->
     <footer>
         <p>&copy; 2025 Your Blog</p>
     </footer>
 
-    <!-- Modal for Article Details -->
     <div id="article-modal" class="modal">
         <div class="modal-content">
             <button class="close-button">&times;</button>
