--- a/blog-post.html
+++ b/blog-post.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="blog-styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul id="categories-nav">
-                </ul>
-        </nav>
-    </header>
-
     <section class="filter-section">
         <label for="time-filter">Filter by Time:</label>
         <select id="time-filter">
@@ -34,14 +27,6 @@
                         </div>
                 </div>
             </div>
-
-            <aside class="sidebar">
-                <h3>Blog Categories</h3>
-                <div class="blog-categories">
-                    <ul id="categories-list">
-                        </ul>
-                </div>
-            </aside>
         </div>
     </main>
 
