--- a/blog-post.html
+++ b/blog-post.html
@@ -3,48 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Page</title>
+    <title>Blog - Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="blog-styles.css">
-</head>
+    <meta http-equiv="refresh" content="300">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-E0RSQS1MS7');
+    </script>
+    <link rel="icon" type="image/png" sizes="192x192" href="images/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff"/>
+    <link rel="apple-touch-icon" media="(prefers-color-scheme: light)" href="/assets/light-icon/180.png">
+    <link rel="apple-touch-icon" media="(prefers-color-scheme: dark)" href="/assets/dark-icon/180.png">
+    <link rel="apple-touch-icon" href="/assets/light-icon/180.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/light-icon/120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/light-icon/152.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="/assets/light-icon/512.png">
+    <meta name="browserconfig" content="/browserconfig.xml">
 <body>
-    <section class="filter-section">
-        <label for="time-filter">Filter by Time:</label>
-        <select id="time-filter">
-            <option value="anytime">Anytime</option>
-            <option value="past-hour">Past Hour</option>
-            <option value="past-24-hours">Past 24 Hours</option>
-            <option value="past-week">Past Week</option>
-            <option value="past-year">Past Year</option>
-        </select>
-    </section>
+    <header>
+        <nav>
+            <ul class="nav-tabs">
+                <li><a href="#" data-category="home">Home</a></li>
+            </ul>
+        </nav>
+
+        <div class="filter-section">
+            <label for="time-filter">Filter by Time:</label>
+            <select id="time-filter">
+                <option value="anytime">Anytime</option>
+                <option value="past-hour">Past Hour</option>
+                <option value="past-24-hours">Past 24 Hours</option>
+                <option value="past-week">Past Week</option>
+                <option value="past-year">Past Year</option>
+            </select>
+        </div>
+
+        <div class="home-button-container" style="text-align: center; padding: 15px 20px; background: var(--content-bg); border-bottom: 1px solid var(--border-color);">
+            <button onclick="window.location.href='index.html'" style="padding: 10px 20px; font-size: 1rem; cursor: pointer; border: 1px solid var(--border-color); border-radius: 8px; background: var(--button-bg, #eee); color: var(--button-text, #333);">
+                Back to Home
+            </button>
+        </div>
+    </header>
 
     <main class="container">
         <div class="main-content">
-            <div class="content-area">
-                <div class="latest-articles">
-                    <h2>Latest Articles</h2>
-                    <div id="articles-container" class="articles-container">
-                        </div>
+            <aside class="sidebar">
+                <div class="blog-categories">
+                    <h3>Blog Category</h3>
+                    <div class="dropdown">
+                        <label for="category-select" class="sr-only">Select Category</label>
+                        <select id="category-select">
+                            <option value="home">Home</option>
+                            <option value="us">U.S.</option>
+                            <option value="world">World</option>
+                            <option value="business">Business</option>
+                            <option value="technology">Technology</option>
+                            <option value="entertainment">Entertainment</option>
+                            <option value="sports">Sports</option>
+                            <option value="science">Science</option>
+                            <option value="health">Health</option>
+                        </select>
+                    </div>
                 </div>
+            </aside>
+
+            <div class="content-area">
+                <section class="latest-articles">
+                    <h2>The Blog</h2>
+                    <div id="news-container" class="articles-container latest-grid">
+                    </div>
+                </section>
             </div>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Blog</p>
+        <div class="container">
+            <p>&copy; 2025 Bus Army Dude. All rights reserved.</p>
+        </div>
     </footer>
 
-    <div id="article-modal" class="modal">
+    <div id="modal" class="modal">
         <div class="modal-content">
-            <button class="close-button">&times;</button>
+            <button class="close-button" onclick="closeModal()">×</button>
             <div class="modal-header">
-                <h2 id="modal-title"></h2>
+                <h3 id="category-name" class="category-name">Category</h3>
+                <h2 id="article-title" class="article-title">Article Title</h2>
             </div>
             <div class="modal-body">
-                <img id="modal-image" src="" alt="Article Image">
-                <p id="modal-description"></p>
-                <div class="posted-by-date">
-                    <span id="modal-posted-by"></span> - <span id="modal-posted-date"></span>
+                <p id="short-description" class="short-description">Short description of the article.</p>
+                <p id="posted-by-date" class="posted-by-date">Posted by: <span id="author"></span> - <span id="date"></span></p>
+                <img id="article-image" class="article-image" src="" alt="Article Image">
+                <div id="article-content" class="article-content">
                 </div>
             </div>
         </div>
