--- a/index.html
+++ b/index.html
@@ -95,6 +95,20 @@ s0.parentNode.insertBefore(s1,s0);
     <p><strong>Thank you for your understanding!</strong></p>
 </div>
 
+        <nav>
+        <ul>
+            <li><a href="#current-president">President</a></li>
+            <li><a href="#tiktok-shoutouts">TikTok</a></li>
+            <li><a href="#instagram-shoutouts">Instagram</a></li>
+            <li><a href="#youtube-shoutouts">YouTube</a></li>
+            <li><a href="#useful-links">Useful Links</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#faq">FAQ</a></li>
+            <li><a href="#tech">Tech</a></li>
+            <li><a href="#disabilities">Disabilities</a></li>
+        </ul>
+    </nav>
+        
    <div class="profile-section">
     <button class="merch-button" aria-label="Merch" onclick="window.location.href='https://bus-army-dude.github.io/bus-army-dude/merchandise.html'"></button>
 
