--- a/index.html
+++ b/index.html
@@ -97,15 +97,18 @@ s0.parentNode.insertBefore(s1,s0);
 
         <nav>
         <ul>
+            <li><a href="#profile-section">President</a></li>
             <li><a href="#current-president">President</a></li>
             <li><a href="#tiktok-shoutouts">TikTok</a></li>
             <li><a href="#instagram-shoutouts">Instagram</a></li>
             <li><a href="#youtube-shoutouts">YouTube</a></li>
             <li><a href="#useful-links">Useful Links</a></li>
-            <li><a href="#events">Events</a></li>
-            <li><a href="#faq">FAQ</a></li>
-            <li><a href="#tech">Tech</a></li>
-            <li><a href="#disabilities">Disabilities</a></li>
+            li><a href="#countdown-section">Countdown</a></li
+            <li><a href="#section-content">Events</a></li>
+            <li><a href="#faq-section">FAQ</a></li>
+            <li><a href="#tech-section section">Tech</a></li>
+            <li><a href="#disabilities-section section">Disabilities</a></li>
+            <li><a href="#version-info-section">Version Information</a></li>
         </ul>
     </nav>
         
