--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ s0.parentNode.insertBefore(s1,s0);
             <li><a href="#instagram-shoutouts">Instagram</a></li>
             <li><a href="#youtube-shoutouts">YouTube</a></li>
             <li><a href="#useful-links">Useful Links</a></li>
-            li><a href="#countdown-section">Countdown</a></li
+            <li><a href="#countdown-section">Countdown</a></li>
             <li><a href="#section-content">Events</a></li>
             <li><a href="#faq-section">FAQ</a></li>
             <li><a href="#tech-section section">Tech</a></li>
