--- a/index.html
+++ b/index.html
@@ -95,22 +95,23 @@ s0.parentNode.insertBefore(s1,s0);
     <p><strong>Thank you for your understanding!</strong></p>
 </div>
 
-        <nav>
-        <ul>
-            <li><a href="#profile-section">President</a></li>
-            <li><a href="#current-president">President</a></li>
-            <li><a href="#tiktok-shoutouts">TikTok</a></li>
-            <li><a href="#instagram-shoutouts">Instagram</a></li>
-            <li><a href="#youtube-shoutouts">YouTube</a></li>
-            <li><a href="#useful-links">Useful Links</a></li>
-            <li><a href="#countdown-section">Countdown</a></li>
-            <li><a href="#section-content">Events</a></li>
-            <li><a href="#faq-section">FAQ</a></li>
-            <li><a href="#tech-section section">Tech</a></li>
-            <li><a href="#disabilities-section section">Disabilities</a></li>
-            <li><a href="#version-info-section">Version Information</a></li>
-        </ul>
-    </nav>
+<nav>
+    <ul>
+        <li><a href="#profile-section">Profile</a></li>
+        <li><a href="#social-links-section">Social Links</a></li>
+        <li><a href="#current-president">President</a></li>
+        <li><a href="#tiktok-shoutouts">TikTok</a></li>
+        <li><a href="#instagram-shoutouts">Instagram</a></li>
+        <li><a href="#youtube-shoutouts">YouTube</a></li>
+        <li><a href="#useful-links-section">Useful Links</a></li>
+        <li><a href="#countdown-section">Countdown</a></li>
+        <li><a href="#events">Events</a></li>
+        <li><a href="#faq-section">FAQ</a></li>
+        <li><a href="#tech-section">Tech</a></li>
+        <li><a href="#disabilities-section">Disabilities</a></li>
+        <li><a href="#version-info-container">Version Information</a></li>
+    </ul>
+</nav>
         
    <div class="profile-section">
     <button class="merch-button" aria-label="Merch" onclick="window.location.href='https://bus-army-dude.github.io/bus-army-dude/merchandise.html'"></button>
