--- a/weather.html
+++ b/weather.html
@@ -87,14 +87,18 @@
                     <div class="highlight-value" data-pressure-value></div>
                 </div>
 
-                <!-- New High and Low Section -->
-                <div class="highlight-item">
-                    <div class="highlight-title">High</div>
-                    <div class="highlight-value" data-high-temperature></div>
-                </div>
-                <div class="highlight-item">
-                    <div class="highlight-title">Low</div>
-                    <div class="highlight-value" data-low-temperature></div>
+                <div class="highlight-item one">
+                    <div class="highlight-title">Temperature</div>
+                    <div class="card-item">
+                        <div>
+                            <div class="title">High</div>
+                            <div class="value" data-high-temperature></div>
+                        </div>
+                        <div>
+                            <div class="title">Low</div>
+                            <div class="value" data-low-temperature></div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="section hourly-forecast" aria-label="hourly forecast" data-hourly-forecast></section>
