--- a/weather.html
+++ b/weather.html
@@ -7,34 +7,34 @@
     <meta name="title" content="weatherio">
     <meta name="description" content="Explore accurate and real-time weather information">
 
-    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/favicon.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assest/css/weather-style.css">
-    <link rel="stylesheet" href="assest/css/settings-style.css">
+    <link rel="stylesheet" href="assets/css/weather-style.css">
+    <link rel="stylesheet" href="assets/css/settings-style.css">
 
-    <script type="module" src="assest/js/app.js"></script>
-    <script type="module" src="assest/js/route.js"></script>
-    <script type="module" src="assest/js/module.js"></script>
-    <script type="module" src="assest/js/settings.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-E0RSQS1MS7');
+    </script>
+
+    <script type="module" src="assets/js/app.js"></script>
+    <script type="module" src="assets/js/route.js"></script>
+    <script type="module" src="assets/js/module.js"></script>
+    <script type="module" src="assets/js/settings.js"></script>
 </head>
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-E0RSQS1MS7');
-</script>
 
 <body>
     <header class="header">
         <div class="container">
-            <a href="" class="logo">
-                <img src="assest/images/logo.png" alt="logo">
+            <a href="#" class="logo">
+                <img src="assets/images/logo.png" alt="logo">
             </a>
             <div class="search-view" data-search-view>
                 <div class="search-wrapper">
@@ -87,44 +87,7 @@
                 <section class="section forecast" aria-labelledby="forecast-label" data-5-day-forecast></section>
             </div>
             <div class="content-right">
-                <section class="section highlights" aria-labelledby="highlights-label">
-                    <h2 id="highlights-label" class="title-3">Today's Highlights</h2>
-                    <div class="highlight-list">
-                        <!-- High and Low Temperatures -->
-                        <div class="highlight-item one">
-                            <div class="card-sm">
-                                <h3 class="title-2">High & Low</h3>
-                                <div class="card-item">
-                                    <div>
-                                        <p class="title">High</p>
-                                        <p class="value" data-high-temp></p>
-                                    </div>
-                                    <div>
-                                        <p class="title">Low</p>
-                                        <p class="value" data-low-temp></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Sunrise and Sunset -->
-                        <div class="highlight-item two">
-                            <div class="card-sm">
-                                <h3 class="title-2">Sunrise & Sunset</h3>
-                                <div class="card-item">
-                                    <div>
-                                        <p class="title">Sunrise</p>
-                                        <p class="value" data-sunrise-time></p>
-                                    </div>
-                                    <div>
-                                        <p class="title">Sunset</p>
-                                        <p class="value" data-sunset-time></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+                <section class="section highlights" aria-labelledby="highlights-label" data-highlights></section>
                 <section class="section hourly-forecast" aria-label="hourly forecast" data-hourly-forecast></section>
             </div>
             <div class="loading" data-loading></div>
@@ -217,11 +180,12 @@
             <span class="span">Go Home</span>
         </a>
     </section>
+
+    <script src="common.js"></script>
+    <script src="globalSettings.js"></script>
+    <script src="script.js"></script>
+    <script src="ai-features.js"></script>
+    <script src="settings.js"></script>
+    <script src="copyright.js"></script>
 </body>
-<script src="common.js"></script>
-<script src="globalSettings.js"></script>
-<script src="script.js"></script>
-<script src="ai-features.js"></script>
-<script src="settings.js"></script>
-<script src="copyright.js"></script>
 </html>
