--- a/weather.html
+++ b/weather.html
@@ -11,13 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assest/css/weather-style.css">
-    <link rel="stylesheet" href="assest/css/settings-style.css">
+    <link rel="stylesheet" href="assets/css/weather-style.css">
+    <link rel="stylesheet" href="assets/css/settings-style.css">
 
-    <script type="module" src="assest/js/app.js"></script>
-    <script type="module" src="assest/js/route.js"></script>
-    <script type="module" src="assest/js/module.js"></script>
-    <script type="module" src="assest/js/settings.js"></script>
+    <script type="module" src="assets/js/app.js"></script>
+    <script type="module" src="assets/js/route.js"></script>
+    <script type="module" src="assets/js/module.js"></script>
+    <script type="module" src="assets/js/settings.js"></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -34,7 +34,7 @@
     <header class="header">
         <div class="container">
             <a href="" class="logo">
-                <img src="assest/images/logo.png" alt="logo">
+                <img src="assets/images/logo.png" alt="logo">
             </a>
             <div class="search-view" data-search-view>
                 <div class="search-wrapper">
@@ -183,7 +183,7 @@
                 </div>
                 <div class="settings-section">
                     <h3 class="settings-section-title">Appearance</h3>
-                     <div class="setting-item">
+                    <div class="setting-item">
                         <label class="setting-label" for="darkMode">Dark Mode:</label>
                         <label class="toggle-switch">
                             <input type="checkbox" name="darkMode" data-dark-mode-toggle data-settings-theme>
