--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,7 @@
                 <!-- Profile Picture -->
                 <img src="profile-picture.jpg" alt="Profile Picture" class="profile-img">
                 <!-- Username -->
-                <p class="username">Your Username</p>
+                <p class="username">Bus Army Dude</p>
             </div>
 
             <!-- Navigation Tabs -->
@@ -27,9 +27,6 @@
                 <li><a href="javascript:void(0);" onclick="switchTab('merch')">Merch Store</a></li>
                 <li><a href="javascript:void(0);" onclick="switchTab('settings')">Settings</a></li>
             </ul>
-
-            <!-- Logout Button -->
-            <button class="logout-btn" onclick="logout()">Logout</button>
         </div>
 
         <!-- Main Content Area -->
